src/test/deca/context/valid/operatBool.deca
// Description:
//    les operations sur les booléens.
//
//
// Historique:
//    cree le 13/01/2023
{
	boolean b1 = true;
	boolean b2 = false;
	b1 = b1 && b2;
	b2 = b2 || b1;
	b1 = !b1;
}
